# kite

./: .gitignore  Cargo.toml  Compose.yaml  Containerfile  Containerfile-wort  Containerfile.template  Makefile  README.md  app.Containerfile  build.rs  checksums.template  docker-compose-noruntime.yml  docker-compose-wort.yml  docker-compose.yml  makefile  my-makefile  runtime-config.toml  schema.sql  spin.prod.toml  spin.toml  spin.toml.template
.cargo/: config.toml
api/: Cargo.toml
api/src/: accounts.rs  auth.rs  bookmarks.rs  endpoint.rs  favourites.rs  lib.rs  statuses.rs  streaming.rs
api/src/endpoint/: v1.rs  v2.rs
api/src/endpoint/v1/: accounts.rs  apps.rs  conversations.rs  follow_requests.rs  followed_tags.rs  instance.rs  lists.rs  notifications.rs  preferences.rs  push.rs  streaming.rs
api/src/endpoint/v1/accounts/: follow.rs  following.rs  lookup.rs  relationships.rs  statuses.rs  unfollow.rs  verify_credentials.rs
api/src/endpoint/v1/instance/: peer.rs
api/src/endpoint/v1/push/: subscription.rs
api/src/endpoint/v1/timelines/: home.rs
api/src/endpoint/v2/: instance.rs  media.rs  search.rs
api/src/timelines/: home.rs  public.rs
api_v2/: Cargo.toml
api_v2/src/: instance.rs  lib.rs  media.rs  search.rs
api_v2/src/media/: get.rs  post.rs
cli/: Cargo.toml
cli/src/: main.rs  search.rs
following/: Cargo.toml
following/src/: lib.rs
oauth/: Cargo.toml  README.md
oauth/src/: http_response.rs  lib.rs  oauth.rs
oauth/src/oauth/: authorize.rs  revoke.rs  token.rs
outbox/: Cargo.toml
outbox/src/: lib.rs
sparrow/: Cargo.toml  Makefile  README.md
sparrow/.cargo/: config.toml
sparrow/migrations/: 20240508031429_create_account_table.sql  20240508031429_create_table_account.sql  20240508061350_insert_sample_account.sql  20240508061350_insert_sample_account_row.sql  20240508065434_create_table_user.sql  20240508065434_create_user_table.sql  20240508065444_insert_sample_user.sql  20240508065444_insert_test_user.sql  20240508073516_create_domain_allow_table.sql  20240508073529_create_domain_block_table.sql  20240508074310_create_instance_view.sql  20240508074310_create_view_instance.sql  20240615010440_create_oauth_access_grant.sql  20240615010440_create_table_oauth_access_grant.sql  20240615010541_create_oauth_access_token.sql  20240615010541_create_table_oauth_access_token.sql  20240615010547_create_oauth_application.sql  20240615010547_create_table_oauth_application.sql  20240615010554_create_table_one_time_key.sql  20240616060723_create_inbox_log_table.sql  20240616060723_create_table_activity_log.sql  20240618094608_create_follow_table.sql  20240618094608_create_table_follow.sql  20240619073959_create_table_setting.sql  20240619075101_insert_sample_setting.sql  20240619075101_insert_setting.sql  20240628081907_create_table_status.sql  20240630085057_create_table_notification.sql  20240630092729_create_table_conversation.sql  20240630094631_create_table_tag.sql  20240702045251_create_actor_json_table.sql  20240704085613_create_table_user_role.sql  20240704091905_insert_sample_user_role.sql  20240704093640_create_table_mute.sql  20240705110258_create_media_attachement_table.sql  20240705110258_create_table_media_attachement.sql  README.md  _mastodon_postgresql_db_schema.dump.sql_
sparrow/src/: activitypub.rs  activitystream.rs  asd.rs  auth.rs  cache.rs  db.rs  fed_id.rs  follow_request.rs  follow_request_.rs  http_response.rs  keys.rs  lib.rs  mastodon.rs  mstor.rs  postbox.rs  send.rs  storage.rs  table.rs  utils.rs  webfinger.rs
sparrow/src/activitypub/: _apo.rs  accept.rs  accepted_activity.rs  actor.rs  apo.rs  follow.rs  follower.rs  following.rs  object.rs  outbox.rs  person_actor.rs
sparrow/src/activitypub/follow/: follower.rs  following.rs
sparrow/src/activitystream/: _outbox.rs  activity.rs  actor.rs  collection.rs  object.rs  ordered_collection.rs
sparrow/src/activitystream/activity/: accept.rs  create.rs  delete.rs  follow.rs  undo.rs
sparrow/src/activitystream/actor/: person.rs
sparrow/src/activitystream/object/: note.rs  replies.rs  tombstone.rs
sparrow/src/mastodon/: account.rs  activity_log.rs  application.rs  credential_account.rs  custom_emoji.rs  filter.rs  filter_keyword.rs  filter_result.rs  filter_status.rs  follow.rs  instance.rs  list.rs  media.rs  media_attachement.rs  media_attachment.rs  notification.rs  poll.rs  preview_card.rs  relationship.rs  relationship_severance_event.rs  report.rs  setting.rs  status.rs  tag.rs  token.rs  uid.rs  user.rs  user_role.rs  username.rs
sparrow/src/mastodon/account/: actor_url.rs  credential_account.rs  field.rs  muted_account.rs  search.rs  source.rs  uid.rs  uri.rs  username.rs
sparrow/src/storage/: memory_keyval.rs  s3.rs_
sparrow/src/table/: account.rs  activity_log.rs  actor_json.rs  conversation.rs  conversation_mute.rs  follow.rs  inbox_log.rs  inbox_logs.rs  media_attachment.rs  mute.rs  notification.rs  oauth_access_grant.rs  oauth_access_token.rs  oauth_apllication.rs  oauth_application.rs  one_time_key.rs  setting.rs  status.rs  user.rs  user_role.rs  utils.rs
sparrow/tests/: .gitignore  Cargo.toml
sparrow/tests/src/: lib.rs
web/: Cargo.toml
web/src/: _endpoint.rs  actor.rs  actor_struct.rs  endpoint.rs  featured.rs  foo.rs  front.rs  html_render.rs  http_response.rs  http_responses.rs  json_render.rs  lib.rs  outbox.rs  tests.rs  traits.rs  users.rs  util.rs  utils.rs
web/src/_endpoint/: _endpoint.rs  _featured.rs  _signature.rs
web/src/_endpoint/_users/: activities.rs  inbox.rs
web/src/endpoint/: _followers.rs  _following.rs  actor.rs  followers.rs  following.rs  inbox.rs  outbox.rs
web/src/html_render/: root_page.rs
web/src/json_render/: actor.rs  followers.rs  following.rs  inbox.rs  outbox.rs
web/src/json_render/users/: inbox.rs
web/src/users/: followers.rs  following.rs  inbox.rs  outbox.rs
web/src/users/activities/: accept.rs  follow.rs  undo.rs
webfinger/: Cargo.toml  README.md
webfinger/src/: lib.rs
webfinger/static/: webfinger.json
well-known/: Cargo.toml
well-known/src/: hostmeta.rs  lib.rs  webfinger.rs
(+51 files in other folders)
