[package]
name = "api"
authors = ["Seungjin Kim <seungjin@duck.com>"]
description = "Minimum Mastodon API implementation to take off"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = { git = "https://github.com/fermyon/spin-rust-sdk", branch = "main" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["preserve_order"] }
serde_derive = "1"
chrono = { version = "0.4.31", features = ["serde", "wasmbind"] }
url = { version = "2.5.0", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "fmt",
    "std",
] }
rand = "0.8"
uuid = { version = "1", features = ["v4", "fast-rng"] }
maplit = "1.0.2"
comrak = "0.26"
regex = "1.10"

sparrow = { path = "../sparrow" }
