[package]
name = "api_v2"
authors = ["Seungjin Kim <seungjin@duck.com>"]
description = "api v2"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = { git = "https://github.com/fermyon/spin-rust-sdk", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_derive = "1"
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2.5.0", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "fmt",
    "std",
] }
rand = "0.8"
regex = "1.10.2"
multipart-2021 = "0.19"
uuid = { version = "1", features = ["v4", "v7", "fast-rng"] }
mime = "0.3"

sparrow = { path = "../../sparrow" }
frameshop = { git = "https://github.com/prefer-social/frameshop", branch = "main" }
