[package]
name = "following"
authors = ["Seungjin Kim <seungjin@duck.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde_json = { version = "1.0.108", features = ["preserve_order"] }
spin-sdk = { git = "https://github.com/fermyon/spin-rust-sdk", branch = "main" }
serde = { version = "1.0.193", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
url = { version = "2.5.0", features = ["serde"] }
async-trait = { version = "0.1.74", features = [] }
rand = "0.8.5"
serde_derive = "1"
rsa = { version = "0.9.6", features = ["serde", "sha2"] }
headers = "0.4"
epoch = "0.0.2"
pem = "3.0.3"
regex = "1.10.2"
uuid = { version = "1", features = ["v4", "fast-rng"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "fmt",
    "std",
] }
base64 = "0.22"
sha2 = "0.10.8"

sparrow = { path = "../sparrow" }
