[package]
name = "oauth"
authors = ["Seungjin Kim <seungjin@duck.com>"]
description = "oauth"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = { git = "https://github.com/fermyon/spin-rust-sdk", branch = "main" }
#spin-sdk = { path = "../../../rust/spin-rust-sdk" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "fmt",
    "std",
] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["preserve_order"] }
password-hash = "0.5.0"
argon2 = "0.5.2"
querystring = "1.1.0"
url = "2.5.0"
jwt-simple = "0.12.7"
passwords = "3.1.16"
sparrow = { git = "https://github.com/prefer-social/sparrow", branch = "main" }