[package]
name = "web"
authors = ["Seungjin Kim <seungjin@duck.com>"]
description = "web front / HTTP requests and responses"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde_json = { version = "1.0.108", features = ["preserve_order"] }
spin-sdk = { git = "https://github.com/fermyon/spin-rust-sdk", branch = "main" }
#spin-sdk = { path = "../../../rust/spin-rust-sdk" }
serde = { version = "1.0.193", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
url = { version = "2.5.0", features = ["serde"] }
async-trait = { version = "0.1.74", features = [] }
sparrow = { git = "https://github.com/prefer-social/sparrow", branch = "main" }
rand = "0.8.5"
serde_derive = "1"
rsa = { version = "0.9.6", features = ["serde", "sha2"] }
headers = "0.4"
derive_builder = "0.12.0"
epoch = "0.0.2"
pem = "3.0.3"
pickledb = "0.5.1"
time = "0.3"
mime = "0.3.17"
regex = "1.10.2"
uuid = { version = "1", features = ["v4", "fast-rng"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "fmt",
    "std",
] }
base64 = "0.21.5"
sha2 = "0.10.8"
